--- a/Views/_FAQWidget.cshtml
+++ b/Views/_FAQWidget.cshtml
@@ -5,12 +5,15 @@
     <div id="tab-con" class="tab-content collapse">
         <div class="ibox-content">
             <div id="accordion" role="tablist" aria-multiselectable="true">
+                @foreach(var faq in Model.fAQs)
+            {
+
 
                 <div class="card mb-4">
                     <div class="card-header" role="tab" id="heading1" style="padding: 20px;">
                         <h4 class="mb-0">
                             <a class="collapsed" data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                1. Do You offer a free trial? <i class="fa fa-arrow-down"></i>
+                              @faq.Question <i class="fa fa-arrow-down"></i>
                             </a>
                         </h4>
                     </div>
@@ -18,65 +21,28 @@
                         <div class="card-body" style="padding: 20px;">
                             <h5>
                                 <i>
-                                    Yes, we offer a 14-day free trial.
+                                    @faq.Answer
                                 </i>
                             </h5>
                         </div>
                     </div>
                 </div>
+            }
 
-                <div class="card mb-4">
-                    <div class="card-header" role="tab" id="heading2" style="padding: 20px;">
-                        <h4 class="mb-0">
-                            <a class="collapsed" data-toggle="collapse" href="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                2. Do I need a credit card to start? <i class="fa fa-arrow-down"></i>
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapse2" class="collapse" role="tabpanel" aria-labelledby="heading2" data-parent="#accordion">
-                        <div class="card-body" style="padding: 20px;">
-                            <h5>
-                                <i>
-                                    No, you do not need a credit card to start the free trial.
-                                </i>
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card mb-4">
-                    <div class="card-header" role="tab" id="heading3" style="padding: 20px;">
-                        <h4 class="mb-0">
-                            <a class="collapsed" data-toggle="collapse" href="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                                3. Can I cancel my account any time? <i class="fa fa-arrow-down"></i>
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapse3" class="collapse" role="tabpanel" aria-labelledby="heading3" data-parent="#accordion">
-                        <div class="card-body" style="padding: 20px;">
-                            <h5>
-                                <i>
-                                    Yes, you can cancel your account at any time.
-                                </i>
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Add more FAQ items here in the same format -->
+     
 
                 <button type="button" class="btn btn-primary" style="margin:10px 0px;align-content:center" data-toggle="modal" data-target="#askQuestionModal">Ask a Question</button>
                 <div class="pull-right mx-3">
                 </div>
             </div>
-            <!-- Button to Open the Modal -->
+    
             <div class="sticky-footer  ">
             </div>
         </div>
     </div>
 
 
-    <!-- The Modal -->
+  
     <div class="modal fade" id="askQuestionModal" tabindex="-1" role="dialog" aria-labelledby="askQuestionModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -86,7 +52,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                @using (Ajax.BeginForm("SubmitQuestion", null, new AjaxOptions() { OnSuccess = "handleQuestionSubmitted" }, new { id = "ask-question-form", @class = "form" }))
+                @using (Ajax.BeginForm("SubmitQuestion", null, new AjaxOptions() { OnSuccess = "$('#askQuestionModal').modal('hide'); toastr.success('Question submitted successfully');" }, new { id = "ask-question-form", @class = "form" }))
                 {
                     <div class="modal-body">
                         <div class="form-group">
@@ -105,30 +71,4 @@
         </div>
     </div>
 </div>
-@section Scripts {
-    <script type="text/javascript">
-        function handleQuestionSubmitted(response) {
-            // Handle the success response from the server after submitting the question
-            toastr.success('Query Submitted', 'Success');
-            $('#askQuestionModal').modal('hide');
-        }
-
-        $(function () {
-            $('#ask-question-form').submit(function (event) {
-                event.preventDefault(); // Prevent the default form submission
-
-                // Submit the form data via AJAX
-                $.ajax({
-                    type: $(this).attr('method'),
-                    url: $(this).attr('action'),
-                    data: $(this).serialize(),
-                    success: handleQuestionSubmitted,
-                    error: function () {
-                        toastr.error('An error occurred while submitting your question.', 'Error');
-                    }
-                });
-            });
-        });
-    </script>
-}
 
