--- a/Views/_FAQWidget.cshtml
+++ b/Views/_FAQWidget.cshtml
@@ -1,48 +1,50 @@
 @model FAQModelParams
-
+@{
+    RequireScript(Url.Content("~/Resource/notification.js"));
+}
 <div id="tabs" class="tabs product-tabs" style="margin-top:20px">
-    <h3 class="collapsed nav nav-tabs" style="cursor:pointer;background-color:white;min-height:50px;align-content:center" data-toggle="collapse" href="#tab-con"> Frequently Asked Questions</h3>
+    <h3 class="collapsed nav nav-tabs" style="cursor:pointer;background-color:white;min-height:70px;align-content:center" data-toggle="collapse" href="#tab-con"> Frequently Asked Questions</h3>
     <div id="tab-con" class="tab-content collapse">
         <div class="ibox-content">
             <div id="accordion" role="tablist" aria-multiselectable="true">
-                @foreach(var faq in Model.fAQs)
-            {
+                @foreach (var faq in Model.fAQs)
+                {
 
 
-                <div class="card mb-4">
-                    <div class="card-header" role="tab" id="heading1" style="padding: 20px;">
-                        <h4 class="mb-0">
-                            <a class="collapsed" data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                              @faq.Question <i class="fa fa-arrow-down"></i>
-                            </a>
-                        </h4>
-                    </div>
-                    <div id="collapse1" class="collapse" role="tabpanel" aria-labelledby="heading1" data-parent="#accordion">
-                        <div class="card-body" style="padding: 20px;">
-                            <h5>
-                                <i>
-                                    @faq.Answer
-                                </i>
-                            </h5>
+                    <div class="card mb-4">
+                        <div class="card-header" role="tab" id="heading1" style="padding: 20px;">
+                            <h4 class="mb-0">
+                                <a class="collapsed" data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                                    @faq.Question <i class="fa fa-arrow-down"></i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse1" class="collapse" role="tabpanel" aria-labelledby="heading1" data-parent="#accordion">
+                            <div class="card-body" style="padding: 20px;">
+                                <h5>
+                                    <i>
+                                        @faq.Answer
+                                    </i>
+                                </h5>
+                            </div>
                         </div>
                     </div>
-                </div>
-            }
+                }
 
-     
+
 
                 <button type="button" class="btn btn-primary" style="margin:10px 0px;align-content:center" data-toggle="modal" data-target="#askQuestionModal">Ask a Question</button>
                 <div class="pull-right mx-3">
                 </div>
             </div>
-    
+
             <div class="sticky-footer  ">
             </div>
         </div>
     </div>
 
 
-  
+
     <div class="modal fade" id="askQuestionModal" tabindex="-1" role="dialog" aria-labelledby="askQuestionModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -52,12 +54,13 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                @using (Ajax.BeginForm("SubmitQuestion", null, new AjaxOptions() { OnSuccess = "$('#askQuestionModal').modal('hide'); toastr.success('Question submitted successfully');" }, new { id = "ask-question-form", @class = "form" }))
+                @using (Ajax.BeginForm("SubmitQuestion", null, new AjaxOptions() { OnSuccess = " $('#askQuestionModal').modal('hide');", OnFailure = "toastr.error('Input Field cannot be empty');" }, new { id = "ask-question-form", @class = "form" }))
                 {
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="question">Your Question</label>
-                            @Html.TextArea("question", null, new { @class = "form-control", @placeholder = "Type your question here...", @required = "required" })
+                            <input name="question" class="form-control" placeholder="Type your question here"  />
+                            
                             @Html.Hidden("productId", Model.ProductId)
 
                         </div>
